plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.epam.esm'
version = '1.0'
sourceCompatibility = '17'
targetCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation project(':repository')
	implementation project(':core')
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation ('org.springframework.boot:spring-boot-starter-data-jdbc') {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.10'
	// https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
}

tasks.named('test') {
	useJUnitPlatform()
}
